added methods to add and remove author
