# server/api/Services/IBookService.cs
@@ -12,4 +12,7 @@ public interface IBookService
     Task<bool> Delete(Guid id);
     Task<BookDto> AddGenre(string bookId, string genreId);
     Task<BookDto> RemoveGenre(string bookId, string genreId);
+    Task<BookDto> AddAuthor(Guid bookId, Guid authorId);
+    Task<BookDto> RemoveAuthor(Guid bookId, Guid authorId);
+
 }
